--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
-@${OWNER}:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${TOKEN}
+$ npm login --scope=@NAMESPACE --auth-type=legacy --registry=https://npm.pkg.github.com
+
+> Username: JohntaberAC
+> Password: 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
